--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Welcome</title>
 <link href="/css/style.css" rel="stylesheet" type = "text/css">
 </head>
 <body>
 
-Welcome!
+<h1>Welcome!</h1>
 
+<div>
 <form action = "/userAllProducts">
 <button>Login as User</button>
 </form>
@@ -21,5 +22,6 @@ Welcome!
 <form action = "adminAllProducts">
 <button>Login as Admin</button>
 </form>
+</div>
 </body>
 </html>
